# grading-tool

./: .gitignore  Evaluation_Improvement_Plan.md  FOLDER_STRUCTURE.md  PRESENTATION.md  README.md  Summary-Changes.md  log  pyproject.toml
.claude/: settings.json
app/: main.py  streamlit_app.py
app/pages/: prompt_comparison.py
app/routes/: evaluation.py  grading.py  health.py  runs.py
app/schemas/: api_models.py
app/services/: grader_service.py
configs/: prompts.yaml
data/: final.md  final_solution_design.md  midterm1.md  midterm2.md  rubric_design.md
data/econ/: econ-answer.json  econ-grade.json  econ-question.json
data/outputs/: graded_q9_results.json  graded_q9_summary.csv
data/raw/: final_rubric.json  final_student_answers.json  hw4_q9_student_answers.json  question_final.json  questions_hw4.json  solutions_final.json  solutions_hw4.json
docs/: API.md  ARCHITECTURE_DIAGRAM.md  CALIBRATION.md  DATA_FORMATS.md  DEVELOPMENT.MD  DEVELOPMENT.md  GETTING_STARTED.MD  GETTING_STARTED.md  REPO_DETAILS.md  REPO_NOTES.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  mockData.ts  (+1 more)
scripts/: calibrate_5_questions.py  run_calibration.py  run_calibration_all_questions.py
src/: pipeline.py  run_batch.py
tests/: synthesis_prompt_v1_eval_v2.json  synthesis_prompt_v1_run.json  synthesis_prompt_v2_eval_v2.json  synthesis_prompt_v2_run.json  synthesis_prompt_v3_full.json  synthesis_prompt_v3_full_eval_v2.json  test_evaluation_metrics.py  test_loader.py  test_rubric_grader_schema.py  test_rubric_reviser.py
(+70 files in other folders)
